Footer fixed on desktop, static on mobile

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -179,11 +179,11 @@ header {
 }
 .main {
   margin-top: 85px;
-  // margin-bottom: 52px;
-  // margin-left: auto;
-  // margin-right: auto;
-  // width: 100%;
-  // max-width: calc(100vw - 20px);
+  margin-bottom: 52px;
+
+  @media only screen and (max-width: $breakpoint-small) {
+    margin-bottom: 0;
+  }
 }
 
 .mobile-nav-open {
@@ -200,17 +200,21 @@ header {
   opacity: 0;
 }
 footer {
-  // position: fixed;
-  // width: 100vw;
-  // bottom: 0;
-  // left: 0;
-  // right: 0;
+  position: fixed;
+  width: 100vw;
+  bottom: 0;
+  left: 0;
+  right: 0;
   font-size: 12px;
   display: flex;
   align-items: center;
   background: darken($base-color, 60);
   color: white;
   padding: 10px;
+
+  @media only screen and (max-width: $breakpoint-small) {
+    position: static;
+  }
 
   .contact-me {
     @media only screen and (max-width: $breakpoint-small) {
